# harbor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HARBOR-M0-PHASE.md  HARBOR-M1-PHASE.md  HARBOR-M10-PHASE.md  HARBOR-M2-PHASE.md  HARBOR-M3-PHASE.md  HARBOR-M4-PHASE.md  HARBOR-M5-PHASE.md  HARBOR-M6-PHASE.md  HARBOR-M7-PHASE.md  HARBOR-M8-PHASE.md  HARBOR-M9-PHASE.md  HARBOR-PLAN.md  Makefile  README.md  STRATEGY-RESEARCH-PLAN.md  compose.yaml  oanda-bot-spec.md  platform.yml  secret-paths.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/baselines/: midpoint_fixtures.json
backend/tests/: conftest.py  test_auth.py  test_backtest_api.py  test_backtester_bidask.py  test_backtester_data.py  test_backtester_engine.py  test_backtester_exits.py  test_backtester_fills.py  test_backtester_models.py  test_backtester_research_report.py  test_backtester_snapshots.py  test_backtester_stats.py  test_book_recorder.py  test_book_recorder_api.py  test_candle_backfill.py  test_candle_builder.py  test_candle_records.py  test_candle_source_import.py  test_candle_sync_api.py  test_config_api.py  test_config_service.py  test_default_config_file.py  test_events_api.py  test_execution_api.py  test_execution_controls.py  test_execution_models.py  test_execution_reconciliation.py  test_experiment_api.py  test_feed_ingest.py  test_health.py  test_lab_api.py  test_lab_service.py  test_notifier_service.py  test_oanda_client.py  test_oanda_execution_client.py  test_oanda_stream.py  test_oanda_types.py  test_observability_api.py  (+39 more)
(+336 files in other folders)
