[project]
name = "harbor-bot"
version = "0.1.0"
description = "Harbor OANDA practice trading bot backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "httpx>=0.28.0",
    "optuna>=4.9.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=25.0.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[project.scripts]
harbor-bot = "harbor_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
